# bsynergy

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/base/: bscreenconfigglobal.h
src/client/: bsynergyclient.cpp  bsynergyclient.h
src/gui/: bnewscreendialog.cpp  bnewscreendialog.h  bnewscreendialog.ui  bscreenlayoutconfig.cpp  bscreenlayoutconfig.h  bscreenlayoutwidget.cpp  bscreenlayoutwidget.h  bscreenlistwidget.cpp  bscreenlistwidget.h  bsynergywidget.cpp  bsynergywidget.h  bsyngerywidget.ui
src/interface/: iscreen.h
src/net/: bclient.cpp  bclient.h  blistenserver.cpp  blistenserver.h  bnetworkglobals.h
src/platform/: bmswindowskeytranslator.cpp  bmswindowskeytranslator.h  bmswindowsscreen.cpp  bmswindowsscreen.h  bmswindowsthread.cpp  bmswindowsthread.h  bx11controlthread.cpp  bx11controlthread.h  bx11keytranslator.cpp  bx11keytranslator.h  bx11screen.cpp  bx11screen.h
src/server/: bsynergyserver.cpp  bsynergyserver.h
